# boost-config-file-reader

./: CMakeLists.txt  README.md  pretty.sh
app/: CMakeLists.txt
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/app/: main.cpp
lib/: CMakeLists.txt
lib/src/: CMakeLists.txt
lib/src/main/cpp/: CMakeLists.txt
lib/src/main/cpp/reader/: configreader.cpp  configreader.h
lib/src/main/resources/: config.ini
lib/src/reader/: configreader.cpp
lib/src/test/cpp/: CMakeLists.txt
lib/src/test/cpp/reader/: CMakeLists.txt  configreaderTest.cpp  main.cpp
lib/test/: CMakeLists.txt
main/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  main.cpp
src/reader/: ConfigReader.cpp  ConfigReader.h  configreader.cpp  configreader.h
test/: CMakeLists.txt
test/reader/: configreaderTest.cpp
